# fictionalize-me

./: .gitignore  .prettierignore  README.md  SQL_REFACTORING_NOTES.md  db-migrate.sh  docker-compose.yml  eslint.config.mjs  manage.py  next-steps.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  vercel.json  vitest.config.ts  vitest.integration.config.ts
.github/: copilot-instructions.md
accounts/: admin.py  models.py  urls.py  views.py
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: AuthButtons.tsx  ConfirmationModal.tsx  CsrfTokenInput.tsx  DailyWriteModal.tsx  DraggableTaskList.tsx  DynamicDashboardLink.tsx  EditEntryModal.tsx  EntryButtonAliases.tsx  EntryButtonModal.tsx  EntrySuccessModal.tsx  FormButton.tsx  JournalCalendar.tsx  JournalEntryModal.tsx  JournalStreak.tsx  JournalStreakCalendar.tsx  JournalStreakWrapper.tsx  KeyboardNavigation.tsx  MiniJournalStreakCalendar.tsx  MiniJournalStreakCalendarServer.tsx  Modal.tsx  NewEntryModal.tsx  QuickTaskButton.tsx  SortableTaskItem.tsx  StreakMilestone.tsx  TaskCompletionStats.tsx  Timer.tsx  TimerContainer.tsx  WritingStats.tsx
db/: schema.sql
docs/: SUB_TASKS_FEATURE_BRIEF.md
features/: admin.py  context_processors.py  decorators.py  models.py  services.py
fictionalize-me-next/: README.md  db-migrate.sh  docker-compose.yml
fictionalize_me/: asgi.py  settings.py  urls.py  wsgi.py
hooks/: useDailyWrite.ts
journals/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
playwright-report/: index.html
tests/: setup.ts  (+1 more)
(+206 files in other folders)
