[project]
name = "fictionalize-me"
version = "0.1.0"
description = "Django app to help customers create a fictional book based on prompts and/or journal entries from their life and then publish to eBook stores"
authors = [
    {name = "Nick Little",email = "n14little@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[tool.poetry]
package-mode = false
